fixed deleted labels not removing from contacts, added toast to saving labels, moved create contact plus icon and search bar to prevent overlaps

--- a/src/app/components/address-book/address-book.component.scss
+++ b/src/app/components/address-book/address-book.component.scss
@@ -1,5 +1,5 @@
 .filter-input{
-    padding: 3px;
+    padding: 3px 70px 3px 15px;
 }
 
 .table-container{
@@ -43,7 +43,3 @@
     }
 }
 
-.create-contact-button{
-    margin-top: -10px;
-    margin-right: 10px;
-}
